...
    dispatch(toggleCompleted(task.id));
    AppPopup("Changed saved", "", "success");
  };

  const handleDelete = () => {
    dispatch(deleteTask(task.id));
    AppPopup("Deleted successfully", "", "success");
  };

  return (
    <View
      style={styles.card}
      //   entering={FadeInDown.duration(100).delay(100 * index)}
...
