...
      </TouchableOpacity>
      <View style={styles.container}>
        <FilterHeader />

        <FilterInput
          label="Title"
          placeholder="Search by title..."
          value={title}
          onChangeText={setTitle}
        />

        <FilterStatusPicker status={status} setStatus={setStatus} />

...
