appId: host.exp.Exponent
---
- launchApp
- tapOn: taskmanagement
- assertVisible: "Task Manager"
- tapOn:
    id: "edit0"

- tapOn: "Task Title"
- inputText: "Demo task "
- tapOn: "Task details"
- inputText: "Demo task details "

- tapOn:
    id: "update"
- assertVisible: Task updated
