appId: host.exp.Exponent
---
- launchApp
- tapOn: taskmanagement
- assertVisible: "Welcome"
- tapOn: "Continue with goggle"
